# TPHD-Mods

./: .gitignore
Cemu/TwilightPrincessHD_AestheticArmor/: patches.txt  rules.txt
Wii U/Aesthetic Armor/: CMakeLists.txt  PluginSystem.cmake  README.md  dockerfile  main.cpp
